fixing header width on smaller devices

--- a/source/stylesheets/components/_cityscape.sass
+++ b/source/stylesheets/components/_cityscape.sass
@@ -1,3 +1,21 @@
+$tablet: "(max-width: 865px)"
+
 .cityscape
   background: url(/images/cityscape.png)
 
+@media #{$tablet}
+  .cityscape
+    display: none
+  .charts
+    top: 0px
+  .toggle-city
+    display: none
+
+.toggle-city
+  @extend %icon-menu-before
+  position: absolute
+  top: 10px
+  right: 10px
+  z-index: 10
+  color: #fff
+  cursor: pointer
